deployment/aks/base/client-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-app
  namespace: reference-implementation
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      name: port8080
      port: 8080
      protocol: TCP
  selector:
    app: client-app
