deployment/aks/base/client-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-app
  namespace: reference-implementation
spec:
  ingressClassName: traefik
  rules:
    - host: client-app.dev.privatelink.westeurope.azmk8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resource-server
                port:
                  number: 80
